<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="dashboard"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_dashboard_short"
        android:shortcutLongLabel="@string/shortcut_dashboard_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/dashboard.php" />
    </shortcut>
    <shortcut
        android:shortcutId="alfred_ai"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_alfred_short"
        android:shortcutLongLabel="@string/shortcut_alfred_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/alfred.php" />
    </shortcut>
    <shortcut
        android:shortcutId="gocodeme"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_gocodeme_short"
        android:shortcutLongLabel="@string/shortcut_gocodeme_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/gocodeme.php" />
    </shortcut>
    <shortcut
        android:shortcutId="games"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_games_short"
        android:shortcutLongLabel="@string/shortcut_games_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/games.php" />
    </shortcut>
    <shortcut
        android:shortcutId="marketplace"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_marketplace_short"
        android:shortcutLongLabel="@string/shortcut_marketplace_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/marketplace.php" />
    </shortcut>
    <shortcut
        android:shortcutId="extensions"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_extensions_short"
        android:shortcutLongLabel="@string/shortcut_extensions_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/extensions.php" />
    </shortcut>
    <shortcut
        android:shortcutId="fleet"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_fleet_short"
        android:shortcutLongLabel="@string/shortcut_fleet_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/fleet-dashboard.php" />
    </shortcut>
    <shortcut
        android:shortcutId="developer"
        android:enabled="true"
        android:shortcutShortLabel="@string/shortcut_developer_short"
        android:shortcutLongLabel="@string/shortcut_developer_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://gositeme.com/developer-portal.php" />
    </shortcut>
</shortcuts>
